# Hunyuan3D-2.1

./: .gitignore  gradio_app.py
hy3dpaint/custom_rasterizer/: pyproject.toml
